[package]
name = "vdebugger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = {  version = "0.29.0", features = ["process", "ptrace", "personality"] }
linefeed = "0.6.0"
strum = "0.26"
strum_macros = "0.26"

[dev-dependencies]
lazy_static = "1.5.0"
mockall = "0.12.1"
